--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,18 @@ jobs:
 
     runs-on: ubuntu-latest
     name: Elixir CI
-    strategy:
-      matrix:
-        otp: ['26.2.5']
-        elixir: ['1.16.2']
     steps:
-    - name: Set up Elixir
+    - name: Determine the elixir version
+      run: echo "ELIXIR_VERSION=$(grep -h elixir .tool-versions | awk '{ print $2 }' | awk -F - '{print $1}')" >> $GITHUB_ENV
+
+    - name: Determine the otp version
+      run: echo "OTP_VERSION=$(grep -h erlang .tool-versions | awk '{ print $2 }')" >> $GITHUB_ENV
+
+    - name: Setup Elixir and Erlang versions
       uses: erlef/setup-beam@v1
       with:
-        otp-version: ${{matrix.otp}}
-        elixir-version: ${{matrix.elixir}}
+        elixir-version: ${{ env.ELIXIR_VERSION }}
+        otp-version: ${{ env.OTP_VERSION }}
 
     - name: Checkout code
       uses: actions/checkout@v3
@@ -94,16 +96,18 @@ jobs:
 
     runs-on: ubuntu-latest
     name: Elixir Test Coverage
-    strategy:
-      matrix:
-        otp: ['26.2.5']
-        elixir: ['1.16.2']
     steps:
-    - name: Set up Elixir
+    - name: Determine the elixir version
+      run: echo "ELIXIR_VERSION=$(grep -h elixir .tool-versions | awk '{ print $2 }' | awk -F - '{print $1}')" >> $GITHUB_ENV
+
+    - name: Determine the otp version
+      run: echo "OTP_VERSION=$(grep -h erlang .tool-versions | awk '{ print $2 }')" >> $GITHUB_ENV
+
+    - name: Setup Elixir and Erlang versions
       uses: erlef/setup-beam@v1
       with:
-        otp-version: ${{matrix.otp}}
-        elixir-version: ${{matrix.elixir}}
+        elixir-version: ${{ env.ELIXIR_VERSION }}
+        otp-version: ${{ env.OTP_VERSION }}
 
     - name: Checkout code
       uses: actions/checkout@v3
