--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
+    "stats.js": "^0.17.0",
     "three": "^0.164.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0"
   }
 }
