--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,8 @@ jobs:
           ${{ runner.os }}-mix-${{ env.cache-name }}-
           ${{ runner.os }}-mix-
 
-    - name: Install dependencies
-      run: mix deps.get
+    - name: Setup
+      run: mix setup
 
     - name: Compiles without warnings
       run: mix compile --warnings-as-errors
@@ -135,8 +135,8 @@ jobs:
           ${{ runner.os }}-mix-${{ env.cache-name }}-
           ${{ runner.os }}-mix-
 
-    - name: Install dependencies
-      run: mix deps.get
+    - name: Setup
+      run: mix setup
 
     - name: Compiles without warnings
       run: mix compile --warnings-as-errors
